# PrOS

./: .gitignore  CMakeLists.txt  README.md  main.cpp
src/Essentials/: MainWindow.cpp  MainWindow.h
src/Essentials/CustomClass/ImageButton/: ImageButton.h
src/Essentials/CustomClass/ImageLabel/: ImageLabel.cpp  ImageLabel.h
src/Essentials/CustomClass/TaskbarThemes/: TaskBarThemes.cpp  TaskBarThemes.h
src/Essentials/CustomClass/TextLabel/: TextLabel.cpp  TextLabel.h
src/Essentials/UI/StarterMenu/: StarterMenu.cpp  StarterMenu.h
src/Essentials/Utils/: GetTimeDate.cpp  GetTimeDate.h
